eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: url-shortener
  name: ingress-url-shortener
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /url-shortener
            pathType: Prefix
            backend:
              service:
                name: service-url-shortener
                port:
                  number: 80
    - http:
        paths:
          - path: /url-shortener-auth
            pathType: Prefix
            backend:
              service:
                name: service-url-shortener-auth
                port:
                  number: 80
